k8s/old/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: my-tg-chan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.4.2
        command: ["redis-server", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: my-tg-chan
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
