k8s/old/telegram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram
  namespace: my-tg-chan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram
  template:
    metadata:
      labels:
        app: telegram
    spec:
      containers:
      - name: telegram
        image: dev_tg
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jpgs-volume
          mountPath: /app/jpgs
      volumes:
      - name: jpgs-volume
        persistentVolumeClaim:
          claimName: jpgs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: telegram
  namespace: my-tg-chan
spec:
  selector:
    app: telegram
  ports:
  - port: 80
    targetPort: 80
