k8s/old/tmdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tmdb
  namespace: my-tg-chan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tmdb
  template:
    metadata:
      labels:
        app: tmdb
    spec:
      containers:
      - name: tmdb
        image: dev_tmdb
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jpgs-volume
          mountPath: /app/jpgs
      volumes:
      - name: jpgs-volume
        persistentVolumeClaim:
          claimName: jpgs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tmdb
  namespace: my-tg-chan
spec:
  selector:
    app: tmdb
  ports:
  - port: 80
    targetPort: 80
