k8s/old/tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel
  namespace: my-tg-chan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunnel
  template:
    metadata:
      labels:
        app: tunnel
    spec:
      containers:
      - name: tunnel
        image: dev_tun
        imagePullPolicy: Never
        ports:
        - containerPort: 1089
---
apiVersion: v1
kind: Service
metadata:
  name: tunnel
  namespace: my-tg-chan
spec:
  selector:
    app: tunnel
  ports:
  - port: 1089
    targetPort: 1089
